# FastAPITemplate

./: .env.template  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: exception_handlers.py
migrations/: env.py
src/: main.py  providers.py
src/api/: dependencies.py  exception_handlers.py  main.py
src/core/: config.py  db.py  db_helper.py  unit_of_work.py
src/core/dto/: __init__.py
src/core/exceptions/: database.py  external_api.py
src/core/models/: __init__.py  base.py
src/core/repositories/: base.py
src/infrastructure/cache/: __init__.py  redis.py
src/infrastructure/db/: __init__.py  db_helper.py
src/infrastructure/http_client/: __init__.py  http_api_client.py
