[project]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.11,<0.116",
    "sqlalchemy>=2.0.38,<3",
    "alembic>=1.14.1,<2",
    "asyncpg>=0.30.0,<0.31",
    "greenlet>=3.1.1,<4",
    "pydantic-settings>=2.8.1,<3",
    "orjson>=3.10.15,<4",
    "hypercorn>=0.17.3,<0.18",
    "redis[hiredis]>=7.0.1,<8",
    "aiohttp>=3.13.2,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9,<0.10",
    "mypy>=1.15.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
fix = true
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
